--- a/mdapi/retrieveUnpackaged/pages/Product2New.page
+++ b/mdapi/retrieveUnpackaged/pages/Product2New.page
@@ -1,4 +1,4 @@
-<apex:page controller="Product2Extension" >
+<apex:page standardController="Product2" extensions="Product2Extension">
     <apex:sectionHeader title="New Product" subtitle="Add Inventory" />
     <apex:pageMessages id="pageMessages" />
     <apex:form id="form" >
@@ -15,20 +15,20 @@
                 </apex:pageBlockButtons>
 
                 <apex:pageBlockTable value="{!productsToInsert}" var="p" id="orderItemTable" >
-                    <apex:column headerValue="Name" >
+                    <apex:column headerValue="{!fieldLabels['name']}" >
                         <apex:inputText value="{!p.Name}" />
                     </apex:column>
-                    <apex:column headerValue="Family" >
+                    <apex:column headerValue="{!fieldLabels['family']}" >
                         <apex:selectList value="{!p.Family}" size="1" multiselect="false" >
                         </apex:selectList>
                     </apex:column>
-                    <apex:column headerValue="Active" >
+                    <apex:column headerValue="{!fieldLabels['isactive']}" >
                         <apex:inputField value="{!p.isActive}" />
                     </apex:column>
                     <apex:column headerValue="UnitPrice" >
                         <inputText value="UnitPrice" />
                     </apex:column>
-                    <apex:column headerValue="Init Inventory" >
+                    <apex:column headerValue="{!fieldLabels['initial_inventory__c']}" >
                         <apex:inputField value="{!p.Initial_Inventory__c}" />
                     </apex:column>
                 </apex:pageBlockTable>
