--- a/mdapi/retrieveUnpackaged/pages/Product2New.page
+++ b/mdapi/retrieveUnpackaged/pages/Product2New.page
@@ -4,32 +4,44 @@
     <apex:form id="form" >
         <apex:actionRegion >
             <apex:pageBlock title="Existing Inventory" >
-                Chart goes here
+                <apex:chart height="200" width="600" data="{!inventory}" id="inventoryChart">
+                    <apex:legend position="left"/>
+                    <apex:axis type="Numeric" position="bottom" title="Quantities Remaining" grid="true"
+                               fields="val" >
+                        <apex:chartLabel />
+                    </apex:axis>
+                    <apex:axis type="Category" position="left" fields="name" title="Families" >
+                        <apex:chartLabel />
+                    </apex:axis>
+                    <apex:barSeries orientation="horizontal" axis="bottom" stacked="true"
+                                    xField="val" yField="name" title="Quantities"/>
+                </apex:chart>
             </apex:pageBlock>
             <apex:pageBlock title="New Products" >
                 <apex:pageBlockButtons location="top">
-                    <apex:commandButton action="{!save}" value="Save" />
+                    <apex:commandButton action="{!save}" value="Save" reRender="inventoryChart"/>
                 </apex:pageBlockButtons>
                 <apex:pageBlockButtons location="bottom">
-                    <apex:commandButton action="{!addRows}" value="Add" />
+                    <apex:commandButton action="{!addRows}" value="Add" reRender="pageMessages,orderItemTable"/>
                 </apex:pageBlockButtons>
 
                 <apex:pageBlockTable value="{!productsToInsert}" var="p" id="orderItemTable" >
-                    <apex:column headerValue="{!fieldLabels['name']}" >
-                        <apex:inputText value="{!p.Name}" />
+                    <apex:column headerValue="{!$ObjectType.Product2.Fields.Name.Label}" >
+                        <apex:inputText value="{!p.productRecord.Name}" />
                     </apex:column>
-                    <apex:column headerValue="{!fieldLabels['family']}" >
-                        <apex:selectList value="{!p.Family}" size="1" multiselect="false" >
+                    <apex:column headerValue="{!$ObjectType.Product2.Fields.Family.Label}" >
+                        <apex:selectList value="{!p.productRecord.Family}" size="1" multiselect="false" >
+                            <apex:selectOptions value="{!familyOptions}"/>
                         </apex:selectList>
                     </apex:column>
-                    <apex:column headerValue="{!fieldLabels['isactive']}" >
-                        <apex:inputField value="{!p.isActive}" />
+                    <apex:column headerValue="{!$ObjectType.Product2.Fields.isActive.Label}" >
+                        <apex:inputField value="{!p.productRecord.isActive}" />
                     </apex:column>
-                    <apex:column headerValue="UnitPrice" >
-                        <inputText value="UnitPrice" />
+                    <apex:column headerValue="{!$ObjectType.PricebookEntry.Fields.UnitPrice.Label}" >
+                        <apex:inputText value="{!p.pricebookEntryRecord.UnitPrice}" />
                     </apex:column>
-                    <apex:column headerValue="{!fieldLabels['initial_inventory__c']}" >
-                        <apex:inputField value="{!p.Initial_Inventory__c}" />
+                    <apex:column headerValue="{!$ObjectType.Product2.Fields.Initial_Inventory__c.Label}" >
+                        <apex:inputField value="{!p.productRecord.Initial_Inventory__c}" />
                     </apex:column>
                 </apex:pageBlockTable>
             </apex:pageBlock>
